# GREEN

./: .gitignore  README.md  config.json  config.secret.example.json  pyproject.toml  requirements.txt  run.py  setup.py  test.py
docs/: CLI_EXAMPLE.md
epsilon/: README.md  analyze_green.py  compute_green_general.py  plot_green.py  post_analyze_green.py
epsilon/test_data/: ANALYTICS_MOST_RECENT_256.csv
green_score/: green.py  utils.py
