[project]
name = "green_score"
version = "0.0.12"
description = "GREEN: Generative Radiology Report Evaluation and Error Notation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sophie Ostmeier" },
    { name = "Jean-Benoit Delbrouck" },
]
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch==2.2.2",
    "transformers==4.40.0",
    "accelerate==0.30.1",
    "pillow==10.3.0",
    "sentencepiece==0.2.0",
    "sentence-transformers==3.0.1",
    "datasets==3.2.0",
    "torchvision==0.17.2",
    "opencv-python==4.10.0.84",
    "dill==0.3.9",
    "protobuf==5.29.1",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "pandas",
    "numpy<2",
    "openai>=1.0.0",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
training = [
    "deepspeed",
    "peft",
    "flash-attn",
    "wandb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["green_score"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
