[project]
name = "green_score"
version = "0.0.12"
description = "GREEN: Generative Radiology Report Evaluation and Error Notation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sophie Ostmeier" }, { name = "Jean-Benoit Delbrouck" }]
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch==2.5.1",
    "transformers==4.49.0",
    "accelerate==1.10.1",
    "pillow==11.3.0",
    "sentencepiece>=0.1.99",
    "sentence-transformers>=3.0.1",
    "datasets==4.1.1",
    "torchvision==0.20.1",
    "opencv-python==4.11.0.86",
    "dill==0.4.0",
    "protobuf==6.33.1",
    "scipy==1.16.2",
    "matplotlib==3.10.6",
    "scikit-learn==1.7.2",
    "pandas==2.3.2",
    "numpy==2.3.3",
    "openai==1.109.1",
    "packaging==25.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
training = ["deepspeed", "peft", "flash-attn", "wandb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["green_score"]

[tool.uv]
dev-dependencies = ["pytest", "ruff"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
